added manuscript title

--- a/5_manuscript/manuscript_template.Rmd
+++ b/5_manuscript/manuscript_template.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Paper title
+title: Evaluating the use of blood donor data for SARS-CoV-2 serological surveillance
 author: 
 output: 
   officedown::rdocx_document:
