--- a/5_manuscript/survey_comparison.Rmd
+++ b/5_manuscript/survey_comparison.Rmd
@@ -230,32 +230,32 @@ block_caption("Seropositivity estimation during Omicron, January - April, 2022. 
 
 # Supplemental tables
 
-```{r}
-stab_num <- run_autonum(seq_id = "stab", 
-                       pre_label = "Table S", 
-                       bkm="t-sample-2",
-                       bkm_all = TRUE,
-                       prop = fp_text(bold=TRUE, underlined = TRUE))
+<!-- ```{r} -->
+<!-- stab_num <- run_autonum(seq_id = "stab", -->
+<!--                        pre_label = "Table S", -->
+<!--                        bkm="t-sample-2", -->
+<!--                        bkm_all = TRUE, -->
+<!--                        prop = fp_text(bold=TRUE, underlined = TRUE)) -->
 
-t_samp <- as_flextable(as_grouped_data(read_excel("../1_data/tables.xlsx", sheet = "sample"),
-                                              groups = "subhead"))
-t_samp <- compose(t_samp, i = ~ !is.na(subhead), j = "col1",
-              value = as_paragraph(as_chunk(subhead)))
-t_samp <- fontsize(t_samp, size = 10, part = "all")
-t_samp <- font(t_samp, fontname = "Times", part = "all")
-t_samp <- theme_box(t_samp)
-t_samp <- bg(t_samp, bg = "#EAEAEA", part = "header")
-t_samp <- width(t_samp, 1, 1.7)
-t_samp <- bg(t_samp, i = c(1, 3), bg = "#DDDDDD", part = "body")
-t_samp <- bold(t_samp, i = c(1, 3), part = "body")
-t_samp <- set_caption(t_samp,
-                      "This is a sample table.",
-                      autonum = stab_num)
-t_samp <- align(t_samp, align = "left", part = "all")
-t_samp <-  colformat_md(t_samp, j=2:3, part="body")
+<!-- t_samp <- as_flextable(as_grouped_data(read_excel("../1_data/tables.xlsx", sheet = "sample"), -->
+<!--                                               groups = "subhead")) -->
+<!-- t_samp <- compose(t_samp, i = ~ !is.na(subhead), j = "col1", -->
+<!--               value = as_paragraph(as_chunk(subhead))) -->
+<!-- t_samp <- fontsize(t_samp, size = 10, part = "all") -->
+<!-- t_samp <- font(t_samp, fontname = "Times", part = "all") -->
+<!-- t_samp <- theme_box(t_samp) -->
+<!-- t_samp <- bg(t_samp, bg = "#EAEAEA", part = "header") -->
+<!-- t_samp <- width(t_samp, 1, 1.7) -->
+<!-- t_samp <- bg(t_samp, i = c(1, 3), bg = "#DDDDDD", part = "body") -->
+<!-- t_samp <- bold(t_samp, i = c(1, 3), part = "body") -->
+<!-- t_samp <- set_caption(t_samp, -->
+<!--                       "This is a sample table.", -->
+<!--                       autonum = stab_num) -->
+<!-- t_samp <- align(t_samp, align = "left", part = "all") -->
+<!-- t_samp <-  colformat_md(t_samp, j=2:3, part="body") -->
 
-t_samp
-```
+<!-- t_samp -->
+<!-- ``` -->
 
 ##### 
 
