Add new scripts and comments

--- a/5_manuscript/survey_comparison.Rmd
+++ b/5_manuscript/survey_comparison.Rmd
@@ -76,7 +76,7 @@ sourcestr_t_samp <- gen_tab_sourcestr(df_samp$Source)
 ```
 
 # Abstract
-Blood donors serve as a crucial population for serosurveillance due to its convenient data collection process compared to other public health serveys. The fact that it consists large proportion of the elder male population might throw doubts on the seropositivity estimation for the general population. In this paper, firstly, we compared the seropositivity estimation of the general population across different data resources for varies time period, evaluating the effect of multilevel regression and poststratification (MRP) in comparison to traditional statistical adjustment approach like raking. Secondly, we further tracked the temporal pattern of the MRP adjusted seropositivity curve to find that representation error is not the main cause of the serosurveillance discrepancy across different data resources, by evaluating the average absolute difference and proportion of days of closer estimations before and after the evaluation. The gap of serosurveillance for the general population among different resources depend on varies factors including the data collection, blood sample type (serum or dried blood spots), assay difference and operating labs. 
+Blood donors serve as a crucial population for serosurveillance due to its convenient data collection process compared to other public health surveys. The fact that it consists large proportion of the elder male population might throw doubts on the seropositivity estimation for the general population. In this paper, firstly, we compared the seropositivity estimation of the general population across different data resources for varies time period, evaluating the effect of multilevel regression and poststratification (MRP) in comparison to traditional statistical adjustment approach like raking. Secondly, we further tracked the temporal pattern of the MRP adjusted seropositivity curve to find that representation error is not the main cause of the serosurveillance discrepancy across different data resources, by evaluating the average absolute difference and proportion of days of closer estimations before and after the evaluation. The gap of serosurveillance for the general population among different resources depend on varies factors including the data collection, blood sample type (serum or dried blood spots), assay difference and operating labs. 
 
 **Background:** A
 
